syntax = "proto3";

package payment;

import "google/protobuf/empty.proto";

option go_package = "grpc/pb";

message CreditCard {
  string name = 1;
  string number = 2;
  int32 expirationMonth = 3;
  int32 expirationYear = 4;
  int32 cvv = 5;
}

message PaymentRequest {
  CreditCard creditCard = 1;
  double amount = 2;
  string store = 3;
  string description = 4;
}

service PaymentService {
  rpc Payment(PaymentRequest) returns (google.protobuf.Empty) {}
}
